--- a/public/assets/global/plugins/bootstrap/css/bootstrap.css
+++ b/public/assets/global/plugins/bootstrap/css/bootstrap.css
@@ -5609,7 +5609,7 @@ button.close {
   clear: both; }
 
 .center-block {
-  display: block;
+  display: block !important;
   margin-left: auto;
   margin-right: auto; }
 
